tooltip lifetime updated with a global variable

--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
@@ -30,7 +30,7 @@
                         label="Download .csv table"
                         class="btn-action-large"
                         pTooltip="Download the table to a .csv file"
-                        life="2000"
+                        [life]="globals.tooltipLifetime"
                         (click)="getSummaryStatisticsAsCsv()">
                 </button>
               </div>
