--- a/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
+++ b/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
@@ -1,9 +1,12 @@
 <div class="p-grid no-gutters">
-  <div class="p-col-12">
+  <div class="p-col-11">
     <p-checkbox label="Use measurements at given depth: "
                 [binary]="true" [ngModel]="true" readonly="true" class="param-filter-checkbox">
     </p-checkbox>
     <a (click)="dialogVisible=true"><span style="padding-left: 5px;cursor: pointer;">select...</span></a>
+  </div>
+  <div *ngIf="filterModel$|async as filterModel" [ngClass]="{'p-col-1': true}">
+    <span class="pi pi-question-circle" [pTooltip]="filterModel.filterDto.help_text"></span>
   </div>
 </div>
 
