--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -4825,6 +4825,18 @@ div.carousel-caption{
   background: #F8C100;
 }
 
+.p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link-active {
+  background: #F8C100;
+}
+
+.p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link-active .p-menuitem-text {
+  color: #ffffff;
+}
+
+.p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link-active .p-menuitem-icon {
+  color: #ffffff;
+}
+
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link:not(.p-disabled):hover .p-menuitem-text {
   color: #ffffff;
 }
@@ -4863,18 +4875,19 @@ div.carousel-caption{
 
 .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-text,
 .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover .p-menuitem-text {
-  color: rgba(0, 0, 0, 0.9);
+  color: white;
 }
 
 .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-icon,
 .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover .p-menuitem-icon {
-  color: rgba(0, 0, 0, 0.9);
+  color: white;
 }
 
 .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link .p-submenu-icon,
 .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover .p-submenu-icon {
-  color: rgba(0, 0, 0, 0.9);
+  color: white;
 }
+
 
 .p-menubar .p-submenu-list {
   padding: 0.5rem 0;
@@ -4903,6 +4916,10 @@ div.carousel-caption{
 
 .p-menubar .p-menuitem.p-menuitem-active > .p-menuitem-link {
   background:  rgba(248, 193, 0, .5);
+}
+
+.p-menubar .p-menuitem > .p-menuitem-link.p-menuitem-link-active {
+  background:   #F8C100;
 }
 
 .p-menubar .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-text {
