--- a/UI/src/app/pages/validate/validate.component.scss
+++ b/UI/src/app/pages/validate/validate.component.scss
@@ -1,3 +1,8 @@
+@import "src/styles";
+
+div {
+  font-family: $base-font;
+}
 ::ng-deep .map-panel.p-panel {
   .p-panel-content {
     padding: 0px;
