Validation comparison merged (#401)
* resolver added to readValidationSettings function

* Changes in checkbox button

* Added comparison table component

* Development of comparison plots component

* View to get all comparison metrics

* rename validation_config_view

* connected child components and configured plot component

* Developed plot component and connected to reader

* Created comparison table in page

* plots and table in comparison page

* some changes done so that it is emitted if the checkbox is checked or not

* updated environment

* Corrected extent checkbox output

* ngFor removed, as it is not needed here, activeIndex=0 set so that accordions are not collapsed by default

* Different labels added, depending on the status of the list of validations for comparison

* some code refinement done

* parameters corrected to be the same as in download_comparison_table method

* some code refinement done

* message attribute added

* some code refinement done, plus handling error added

* handling comparison error added

* a condition that there should be an output file added

* name of two methods changed so there is no camel case used

* passing error messages added

* get_intersection value parsing added

* a new BehaviorSubject and method added to enable communications between comparison components

* introducing communication between components, so running a new comparison doesn't require refreshing page; some code refinement done

* added assigning a new selected validation after change of the reference dataset;

* dynamic communication added to plots component, some code refinement done.

* startComparison method to replace onChange in plots

* plots decoded as strings and sent using JSON

* getting plots with a use of PlotDto added; existing method for sanitizing used

* onMetricChange method added

* gallery for comparison plots

* Plots description in tooltip

* worked on va

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -1,13 +1,11 @@
-@import "style.variables.scss";
-
 @charset "UTF-8";
+@import "style.variables.scss";
 
 
 $font-dialog-header: 1.25rem;
 $panel-header-padding: 0rem 0.5rem;
 $accordion-header-padding: 0.5rem 0.5rem;
 
-@charset "UTF-8";
 :root {
   --surface-a: #ffffff;
   --surface-b: $base-color;
@@ -5492,7 +5490,7 @@ div.carousel-caption{
 .p-inline-message.p-inline-message-info {
   background: #cce5ff;
   border: solid #b8daff;
-  border-width: 0px;
+  border-width: 0;
   color: #004085;
 }
 
@@ -5503,7 +5501,7 @@ div.carousel-caption{
 .p-inline-message.p-inline-message-success {
   background: #d4edda;
   border: solid #c3e6cb;
-  border-width: 0px;
+  border-width: 0;
   color: #155724;
 }
 
@@ -5514,7 +5512,7 @@ div.carousel-caption{
 .p-inline-message.p-inline-message-warn {
   background: #fff3cd;
   border: solid #ffeeba;
-  border-width: 0px;
+  border-width: 0;
   color: #856404;
 }
 
@@ -5525,7 +5523,7 @@ div.carousel-caption{
 .p-inline-message.p-inline-message-error {
   background: #f8d7da;
   border: solid #f5c6cb;
-  border-width: 0px;
+  border-width: 0;
   color: #721c24;
 }
 
@@ -6224,6 +6222,38 @@ a.btn-action.p-button:hover, a.btn-action-large.p-button:hover{
 .dropdown-item.p-button:hover{
   color: #212529;
   background-color: rgba(248, 193, 0, .5);
+}
+.dataframe thead th{
+  text-align: center;
+}
+.dataframe td:first-child{
+  font-weight: bold;
+}
+.dataframe.comparison td:not(:first-child){
+  width: 10rem;
+}
+.dataframe.comparison td:first-child{
+  min-width: 20rem;
+}
+
+.addDataset.p-button-success, .removeDataset.p-button-danger{
+  height: 2rem;
+}
+
+.addDataset.p-button-success .p-button-label, .removeDataset.p-button-danger .p-button-label{
+  padding-right: 0.2rem;
+}
+.addDataset.p-button-success .p-button-icon, .removeDataset.p-button-danger .p-button-icon{
+  padding-left: 0.2rem;
+}
+
+.clearCoordinates.p-button-info{
+  width: 2.5rem;
+  height: 2.1rem;
+}
+
+.clearCoordinates.p-button-info .p-button-icon{
+  font-size: 1.2rem;
 }
 
 .addDataset.p-button-success, .removeDataset.p-button-danger{
