--- a/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
+++ b/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
@@ -4,8 +4,7 @@
     <p-panel header="Datasets configuration" [toggleable]="false">
       <ng-template pTemplate="icons">
         <label class="mb-0"
-               pTooltip="Select from the menu below to access a list of available validations for comparison, based on
-               common reference dataset and version."
+               pTooltip="Select the reference dataset from the menu below to access a list of validations available for comparison."
                tooltipPosition="bottom">
           <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
         </label>
