--- a/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
+++ b/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
@@ -10,52 +10,72 @@
       </ng-template>
 
       <div *ngIf="updatedMetrics$|async as metrics" style="min-height: 400px">
-        <div *ngIf="metrics[indx] && metrics[indx].overviewFiles|async as overviewPlots">
-          <div class="p-grid p-align-center">
-            <div [ngClass]="{'p-col-5': overviewPlots.length === 1, 'p-col-6': overviewPlots.length > 1}">
-              <img *ngIf="metrics[indx].boxplotFile|async as boxplot"
-                   width="95%"
-                   height="95%"
-                   [src]="sanitizePlotUrl(boxplot[0].plot)"
-                   (click)="showGallery(0, boxplot)"
-                   [ngClass]="{'result-plot':true, 'pcol': overviewPlots.length > 4}"
-                   alt="Boxplot for {{metrics[indx].metric_pretty_name}}">
-            </div>
-            <div class="p-col">
-              <div class="p-grid">
-                <div *ngFor="let plot of overviewPlots; let ind = index"
-                     [ngClass]="{'image-container': true,
+        <div>
+          <div *ngIf="metrics[indx] && metrics[indx].overviewFiles|async as overviewPlots">
+            <div class="p-grid p-align-center">
+              <div [ngClass]="{'p-col-5': overviewPlots.length === 1, 'p-col-6': overviewPlots.length > 1}">
+                <img *ngIf="metrics[indx].boxplotFile|async as boxplot"
+                     width="95%"
+                     height="95%"
+                     [src]="sanitizePlotUrl(boxplot[0].plot)"
+                     (click)="showGallery(0, boxplot)"
+                     [ngClass]="{'result-plot':true, 'pcol': overviewPlots.length > 4}"
+                     alt="Boxplot for {{metrics[indx].metric_pretty_name}}">
+              </div>
+              <div class="p-col">
+                <div class="p-grid">
+                  <div *ngFor="let plot of overviewPlots; let ind = index"
+                       [ngClass]="{'image-container': true,
                              'p-col': overviewPlots.length === 1,
                              'p-col-10': overviewPlots.length === 2,
                              'p-col-6': overviewPlots.length > 2}">
               <span class="image-label">
                 {{metrics[indx].datasets[ind]}}
               </span>
-                  <img width="95%" height="95%"
-                       [src]="sanitizePlotUrl(plot.plot)"
-                       (click)="showGallery(ind, overviewPlots)"
-                       [ngClass]="{'result-plot':true, 'pcol': true}"
-                       alt="An Overview map for {{metrics[indx].metric_pretty_name}}">
+                    <img width="95%" height="95%"
+                         [src]="sanitizePlotUrl(plot.plot)"
+                         (click)="showGallery(ind, overviewPlots)"
+                         [ngClass]="{'result-plot':true, 'pcol': true}"
+                         alt="An Overview map for {{metrics[indx].metric_pretty_name}}">
+                  </div>
                 </div>
               </div>
+
             </div>
 
           </div>
 
-        </div>
-        <div class="p-grid">
-          <div class="p-col-3 px-0 center p-mt-3">
-            <button pButton
-                    type="button"
-                    icon="pi pi-download"
-                    class="btn-action-large"
-                    label="Download graphs"
-                    pTooltip="Download graphs .zip"
-                    [life]="globals.tooltipLifetime"
-                    (click)="downloadResultFile(validation.id, 'graphics',validation.id + '_graphs.zip')">
-            </button>
+          <div *ngIf="metrics[indx].metadataFiles|async as metadataPlots">
+            <hr class="featurette-divider">
+            <div class="p-col">
+              <div class="p-grid">
+                <div *ngFor="let plot of metadataPlots; let ind = index"
+                     [ngClass]="{'image-container': true,
+                             'p-col-6': metadataPlots.length === 2,
+                             'p-col-4': metadataPlots.length === 3}">
+                  <img width="95%" height="95%"
+                       [src]="sanitizePlotUrl(plot.plot)"
+                       (click)="showGallery(ind, metadataPlots)"
+                       [ngClass]="{'result-plot':true, 'pcol': true}"
+                       alt="A metadata plot for {{metrics[indx].metric_pretty_name}}">
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="p-col">
+
+          <div class="p-grid">
+            <div class="p-col-3 px-0 center p-mt-3">
+              <button pButton
+                      type="button"
+                      icon="pi pi-download"
+                      class="btn-action-large"
+                      label="Download graphs"
+                      pTooltip="Download graphs .zip"
+                      [life]="globals.tooltipLifetime"
+                      (click)="downloadResultFile(validation.id, 'graphics',validation.id + '_graphs.zip')">
+              </button>
+            </div>
+            <div class="p-col">
           <span class="p-float-label p-mb-4 p-mt-3">
             <p-dropdown id="metricSelector"
                         (onChange)="onMetricChange()"
@@ -65,22 +85,22 @@
                         [style]="{'width': '100%'}">
             </p-dropdown>
           </span>
-          </div>
-          <div class="p-col-3 px-0 p-mt-3 center">
-            <button pButton
-                    type="button"
-                    class="btn-action-large"
-                    icon="faIcons.faFileDownload"
-                    label="Download NetCDF"
-                    pTooltip="Download all results in NetCDF format"
-                    [life]="globals.tooltipLifetime"
-                    (click)="downloadResultFile(validation.id, 'netCDF', validation.output_file_name)">
-              <span><fa-icon [icon]="faIcons.faFileDownload"></fa-icon></span>
-            </button>
+            </div>
+            <div class="p-col-3 px-0 p-mt-3 center">
+              <button pButton
+                      type="button"
+                      class="btn-action-large"
+                      icon="faIcons.faFileDownload"
+                      label="Download NetCDF"
+                      pTooltip="Download all results in NetCDF format"
+                      [life]="globals.tooltipLifetime"
+                      (click)="downloadResultFile(validation.id, 'netCDF', validation.output_file_name)">
+                <span><fa-icon [icon]="faIcons.faFileDownload"></fa-icon></span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
-
 
     </p-panel>
   </div>
