--- a/UI/src/app/modules/validation-result/components/result-files/result-files.component.scss
+++ b/UI/src/app/modules/validation-result/components/result-files/result-files.component.scss
@@ -22,3 +22,10 @@
 .image-container{
   text-align: center;
 }
+.subtitle {
+  text-align: center;
+  font-size: 1.7rem;
+  color: dimgray;
+  padding-bottom: 1rem;
+}
+
