--- a/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
+++ b/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
@@ -13,8 +13,7 @@
         <div *ngIf="metrics[metricIndx].boxplotFiles|async as boxplots">
           <div *ngIf="metrics[metricIndx] && metrics[metricIndx].overviewFiles|async as overviewPlots">
             <div class="p-grid p-align-center">
-              <div
-                   [ngClass]="{'p-col-5': overviewPlots.length === 1, 'p-col-6': overviewPlots.length > 1}">
+              <div [ngClass]="{'p-col-5': overviewPlots.length === 1, 'p-col-6': overviewPlots.length > 1}">
                 <img width="95%"
                      height="95%"
                      [src]="sanitizePlotUrl(boxplots[boxplotIndx].plot)"
@@ -44,20 +43,23 @@
             </div>
 
           </div>
-          <div class="p-grid p-pt-2">
-            <div class="p-col-3 px-0 center p-mt-3">
-              <button pButton
-                      type="button"
-                      icon="pi pi-download"
-                      class="btn-action-large"
-                      label="Download graphs"
-                      pTooltip="Download graphs .zip"
-                      [life]="globals.tooltipLifetime"
-                      (click)="downloadResultFile(validation.id, 'graphics',validation.id + '_graphs.zip')">
-              </button>
+          <div class="p-grid" *ngIf="boxplots.length > 1">
+            <div class="p-col-6">
+                  <span  class="p-float-label p-mb-4 p-mt-3">
+                      <p-dropdown id="boxplotSelector"
+                                  (onChange)="onBoxPlotChange($event)"
+                                  [options]="metrics[metricIndx].boxplot_dicts"
+                                  [(ngModel)]="selectedBoxplot"
+                                  optionLabel="name"
+                                  [style]="{'width': '100%'}">
+                      </p-dropdown>
+                      <label for="boxplotSelector">Select boxplot classification</label>
+                    </span>
             </div>
-            <div [ngClass]="{'p-col-3': boxplots.length > 1, 'p-col': boxplots.length === 1}">
-              <span class="p-float-label p-mb-4 p-mt-3">
+          </div>
+          <div class="p-grid">
+            <div [ngClass]="{'p-col-6': true}">
+              <span class="p-float-label p-mb-4">
                 <p-dropdown id="metricSelector"
                             (onChange)="onMetricChange()"
                             [options]="metrics"
@@ -68,19 +70,19 @@
                 <label for="metricSelector">Select metric</label>
               </span>
             </div>
-            <div class="p-col-3" *ngIf="boxplots.length > 1">
-              <span  class="p-float-label p-mb-4 p-mt-3">
-                  <p-dropdown id="boxplotSelector"
-                              (onChange)="onBoxPlotChange($event)"
-                              [options]="metrics[metricIndx].boxplot_dicts"
-                              [(ngModel)]="selectedBoxplot"
-                              optionLabel="name"
-                              [style]="{'width': '100%'}">
-                  </p-dropdown>
-                  <label for="boxplotSelector">Select boxplot</label>
-                </span>
+            <div class="p-col-3 px-0 center">
+              <button pButton
+                      type="button"
+                      icon="pi pi-download"
+                      class="btn-action-large"
+                      label="Download graphs"
+                      pTooltip="Download graphs .zip"
+                      [life]="globals.tooltipLifetime"
+                      (click)="downloadResultFile(validation.id, 'graphics',validation.id + '_graphs.zip')">
+              </button>
             </div>
-            <div class="p-col-3 px-0 p-mt-3 center">
+
+            <div class="p-col-3 px-0 center">
               <button pButton
                       type="button"
                       class="btn-action-large"
