--- a/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
+++ b/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
@@ -10,8 +10,8 @@
       </ng-template>
 
       <div *ngIf="updatedMetrics$|async as metrics" style="min-height: 400px">
-        <div *ngIf="metrics[metricIndx].boxplotFiles|async as boxplots">
-          <div *ngIf="metrics[metricIndx] && metrics[metricIndx].overviewFiles|async as overviewPlots">
+        <div *ngIf="metrics[metricIndx] && metrics[metricIndx].boxplotFiles|async as boxplots">
+          <div *ngIf="metrics[metricIndx].overviewFiles|async as overviewPlots">
             <div class="p-grid p-align-center">
               <div [ngClass]="{'p-col-5': overviewPlots.length === 1, 'p-col-6': overviewPlots.length > 1}">
                 <img width="95%"
@@ -74,7 +74,7 @@
               <button pButton
                       type="button"
                       icon="pi pi-download"
-                      class="btn-action-large"
+                      class="btn-action-large download-results"
                       label="Download graphs"
                       pTooltip="Download graphs .zip"
                       [life]="globals.tooltipLifetime"
@@ -85,7 +85,7 @@
             <div class="p-col-3 px-0 center">
               <button pButton
                       type="button"
-                      class="btn-action-large"
+                      class="btn-action-large download-results"
                       icon="faIcons.faFileDownload"
                       label="Download NetCDF"
                       pTooltip="Download all results in NetCDF format"
