some styling improved

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -6158,6 +6158,11 @@ div.carousel-caption{
   border-color: $button-base-color;
 }
 
+.btn-action-large.download-results.p-button{
+  height: 2.5rem;
+  width: 100%;
+}
+
 .btn-action-home.p-button{
   width: 8rem;
   height: 3rem;
