dropdown label updated

--- a/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
+++ b/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
@@ -67,7 +67,7 @@
                             optionLabel="metric_pretty_name"
                             [style]="{'width': '100%'}">
                 </p-dropdown>
-                <label for="metricSelector">Select metric</label>
+                <label for="metricSelector">Select boxplot/map metric</label>
               </span>
             </div>
             <div class="p-col-3 px-0 center">
