--- a/UI/src/app/modules/filter/components/threshold-filter/threshold-filter.component.html
+++ b/UI/src/app/modules/filter/components/threshold-filter/threshold-filter.component.html
@@ -1,25 +1,25 @@
-<div class="p-grid no-gutters">
-  <div class="p-col-4 p-px-0 p-mx-0">
-    <div class="p-fluid">
-      <div class="p-float-label">
-        <p-inputNumber id="threshold_filter" [minFractionDigits]="1" [maxFractionDigits]="2"
-                       [ngModel]="filterModel.selectedValue$|async"
-                       [min]="filterModel.filterDto.min_threshold"
-                       [max]="filterModel.filterDto.max_threshold"
-                       (ngModelChange)="filterModel.selectedValue$.next($event)"
-        ></p-inputNumber>
-        <label for="threshold_filter" [pTooltip]="filterModel.filterDto.description"></label>
+<div class="p-col-12 p-pl-3">
+  <div class="p-grid"  id="thresholdInput">
+    <div class="p-col-2 p-px-0">
+      <div class="p-fluid" *ngIf="filterModel$|async as filterModel" [ngClass]="{'p-col-1': true}">
+        <p> {{filterModel.filterDto.description}} </p>
       </div>
     </div>
-  </div>
-  <div [ngClass]="{'p-col-1': true, 'adjust-margin': false}">
-    <span class="pi pi-question-circle" [pTooltip]="filterModel.filterDto.help_text"></span>
-  </div>
-  <div class="p-col-12 p-sm-2">
-    <div class="p-d-flex p-jc-center">
-      <button pButton type="button" icon="pi pi-trash" pTooltip="Set parameter with default value"
-              class="clearCoordinates p-button-info p-mr-2" style="padding: 0.2rem;"
-              (click)="SetParamDefault()"></button>
+    <div class="p-col-3 p-mx-0 p-px-0 p-fluid">
+      <p-inputNumber id="threshold_filter"
+                     [minFractionDigits]="2"
+                     [maxFractionDigits]="2"
+                     [suffix]="units"
+                     [(ngModel)]="editThreshold"
+                     [showButtons]="true"
+                     [step]=increment
+                     [min]=minThreshold
+                     [max]=maxThreshold
+                     (onInput)="saveNewValue($event)">
+      </p-inputNumber>
+      <div *ngIf="filterModel$|async as filterModel" [ngClass]="{'p-col-1': true}">
+        <span class="pi pi-question-circle" [pTooltip]="filterModel.filterDto.help_text"></span>
+      </div>
     </div>
   </div>
 </div>
