--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -27,7 +27,6 @@
                           [selectionModel]="validationModel.datasetConfigurations[datasetIdx].datasetModel"
                           [removable]="true" (changeDataset)="onDatasetChange($event)"></qa-dataset>
 
-<!--              Normal filters -->
               <ng-container *ngFor="let filter of item.basicFilters; let filterIdx = index">
                 <qa-basic-filter
                   [ngClass]="{'ml-1': isIncluded(filter.filterDto.id, item.basicFilters)}"
@@ -38,12 +37,11 @@
                 </qa-basic-filter>
               </ng-container>
 
-<!--              Filters with a threshold -->
-              <ng-container *ngFor="let thresher of item.thresholdFilters; let filterIdx = index">
-                <qa-threshold-filter
-                  [filterModel]="thresher">
-                </qa-threshold-filter>
-              </ng-container>
+              <qa-threshold-filter *ngIf="validationModel.referenceConfigurations[0].smosRfiFilter$|async"
+                [datasetModel]="validationModel.referenceConfigurations[0].datasetModel"
+                [filterModel$]="validationModel.referenceConfigurations[0].smosRfiFilter$"
+                [minThreshold]="0." [increment]="0.05" maxThreshold="1." [units]="' [-]'">
+              </qa-threshold-filter>
 
               <div style="width: 100%;text-align: right">
                 <button pButton type="button"
@@ -91,15 +89,21 @@
               (changeDataset)="onReferenceChange()"></qa-dataset>
 
             <ng-container *ngFor="let filter of validationModel.referenceConfigurations[0].basicFilters; let i = index">
-              <qa-basic-filter
+              <qa-basic-filter *ngIf="filter.filterDto.id != smos_threshold_filter"
                 [ngClass]="isIncluded(filter.filterDto.id, validationModel.referenceConfigurations[0].basicFilters) == true ? 'ml-1' : ''"
                 [isIncluded]="isIncluded(filter.filterDto.id, validationModel.referenceConfigurations[0].basicFilters)"
                 [filterModel]="filter"
                 (onExcludeMutual)="this.excludeFilter($event, validationModel.referenceConfigurations[0].basicFilters)"
                 (onIncludeMutual)="includeFilter($event, validationModel.referenceConfigurations[0].basicFilters, filter.enabled)">
               </qa-basic-filter>
-
             </ng-container>
+
+            <qa-threshold-filter *ngIf="validationModel.referenceConfigurations[0].smosRfiFilter$|async"
+               [datasetModel]="validationModel.referenceConfigurations[0].datasetModel"
+               [filterModel$]="validationModel.referenceConfigurations[0].smosRfiFilter$"
+               [minThreshold]="0." [increment]="0.05" maxThreshold="1." [units]="' [-]'">>
+            </qa-threshold-filter>
+
             <div *ngIf="validationModel.referenceConfigurations[0].ismnNetworkFilter$|async">
               <qa-ismn-network-filter
 
