--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -37,9 +37,9 @@
                 </qa-basic-filter>
               </ng-container>
 
-              <qa-threshold-filter *ngIf="validationModel.referenceConfigurations[0].smosRfiFilter$|async"
-                [datasetModel]="validationModel.referenceConfigurations[0].datasetModel"
-                [filterModel$]="validationModel.referenceConfigurations[0].smosRfiFilter$"
+              <qa-threshold-filter *ngIf="validationModel.datasetConfigurations[datasetIdx].smosRfiFilter$|async"
+                [datasetModel]="validationModel.datasetConfigurations[datasetIdx].datasetModel"
+                [filterModel$]="validationModel.datasetConfigurations[datasetIdx].smosRfiFilter$"
                 [minThreshold]="0." [increment]="0.05" maxThreshold="1." [units]="' [-]'">
               </qa-threshold-filter>
 
