styling toast message updated so it sees new lines

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -5680,6 +5680,7 @@ div.carousel-caption{
 
 .p-toast .p-toast-message .p-toast-message-content .p-toast-detail {
   margin: 0.5rem 0 0 0;
+  white-space: pre-line;
 }
 
 .p-toast .p-toast-message .p-toast-icon-close {
