--- a/UI/src/app/modules/filter/components/ismn-network-filter/ismn-network-filter.component.html
+++ b/UI/src/app/modules/filter/components/ismn-network-filter/ismn-network-filter.component.html
@@ -1,11 +1,11 @@
-<div class="p-grid no-gutters">
+<div class="p-grid no-gutters"  *ngIf="filterModel$|async as filterModel">
   <div class="p-col-11">
-    <p-checkbox label="Use ISMN Networks:"
+    <p-checkbox label="{{filterModel.filterDto.description}}: "
                 [binary]="true" [ngModel]="true" readonly="true" class="param-filter-checkbox">
     </p-checkbox>
     <a (click)="showNetworkSelector()"><span style="padding-left: 5px;cursor: pointer;">select...</span></a>
   </div>
-  <div *ngIf="filterModel$|async as filterModel" [ngClass]="{'p-col-1': true}">
+  <div [ngClass]="{'p-col-1': true}">
     <span class="pi pi-question-circle" [pTooltip]="filterModel.filterDto.help_text"></span>
   </div>
 </div>
