Update frm4sm with new filters (#426)
* Added hires to references (#405)

* Added hires to references

* function for setting limits on the geographical range fixed, so it doesn't display warning when it is not necessary

Co-authored-by: sheenaze <monika.tercjak@gmail.com>

* removing not needed static files (#411)

* removing not needed static files

* removing not needed static files

* url updated so statistics are generated for each user (#412)

* Fixing tests (#416)

* test for stopping validation fixed

* test for stopping validation moved to the validation_config_view

* code refinement done

* new release prepared (#417)

* Update release-notes.md

* Update dataset names (#415)

* Update datset names

* Update testdata

* Update paths and install new qa4sm-reader

* Update path

* Update dataset name

* Update testdata pointer

* Fix names for irregular grids

* Update testdata commit

* Update qa4sm reader package dependency

* updating condition so the name is not displayed twice for non-logged in users (#422)

* uptime report view added to the admin panel (#423)

* restarting all the containers added (#424)

* Update filters (#418)

* Update filters

* Debug test

* Update filters

* checking if reloading settings still exists added

* redundant code removed

* handling not available settings added

* Alert with header added

* handling changes in reloaded configuration added

* styling toast message updated so it sees new lines

* test updated

* ismn param filters updated so the label is taken from the db

* ismn param filters help text updated

* param filter checkbox styling updated

Co-authored-by: sheenaze <monika.tercjak@gmail.com>

Co-authored-by: pstradio <77664155+pstradio@users.noreply.github.com>
Co-authored-by: Wolfgang Preimesberger <wolfgang.preimesberger@geo.tuwien.ac.at>

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -518,8 +518,8 @@ p-cascadeselect.ng-dirty.ng-invalid > .p-cascadeselect {
 }
 
 .param-filter-checkbox .p-checkbox-box.p-highlight{
-  border-color: rgba(0, 123, 255, 0.16);
-  background: rgba(0, 123, 255, 0.6);
+  border-color: rgba(150, 150, 150, 0.15);
+  background: rgba(150, 150, 150, 0.6);
 }
 
 .p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box:hover {
@@ -5678,6 +5678,7 @@ div.carousel-caption{
 
 .p-toast .p-toast-message .p-toast-message-content .p-toast-detail {
   margin: 0.5rem 0 0 0;
+  white-space: pre-line;
 }
 
 .p-toast .p-toast-message .p-toast-icon-close {
